--- a/abstract/abstract.tex
+++ b/abstract/abstract.tex
@@ -10,10 +10,8 @@
 
 \begin{abstract}
 
-Experimental Extended X-ray Absorption Fine-Structure(EXAFS) spectra carry information about the chemical structure of metal protein complexes. However, predicting the structure of such complexes from EXAFS spectra is not an easy task. To solve this problem we will generate a number of model structures and compare their EXAFS spectra to the experimental EXAFS. Since many generated structures will share similar EXAFS spectra we will be attempting to use genetic algorithms to generate a population of possible structure candidates.
+Experimental Extended X-ray Absorption Fine-Structure(EXAFS) spectra carry information about the chemical structure of metal protein complexes. However, predicting the structure of such complexes from EXAFS spectra is not a simple task. Currently methods such as Monte Carlo Optimization or simulated annealing are used in structure refinement of EXAFS. These methods have shown some success in structure refinement but have trouble finding the global minima. Going off the success of evolutionary algorithms to overcome local minima issues in other domains, we propose an approach using genetic algorithms to predict the  structure of metal protein complexes.
 
 \end{abstract}
-
-
 
 \end{document}
