added title and abstract

--- a/thesis/abstract.tex
+++ b/thesis/abstract.tex
@@ -1,8 +1,6 @@
 \thispagestyle{empty}
 \section*{Abstract}
 \begin{doublespace}
-There is a theory which states that if ever anyone discovers exactly what the Universe is for and why it is here, it will instantly disappear and be replaced by something even more bizarre and inexplicable.
-
-There is another theory which states that this has already happened.
+Experimental Extended X-ray Absorption Fine Structure (EXAFS) spectra carry information about the chemical structure of metal protein complexes. However, predicting the structure of such complexes from EXAFS spectra is not a simple task. Currently methods such as Monte Carlo Optimization or simulated annealing are used in structure refinement of EXAFS. These methods have proved somewhat successful in structure refinement but have not been successful in finding the global minima. Evolutionary algorithms have had success in overcoming local minima issues in other domains. We propose the use of three different approaches to better predict the structure of metal protein complexes: genetic algorithm (GA), particle swarm optimization (PSO), and differential evolution (DE).
 \end{doublespace}   
 
