--- a/thesis/title.tex
+++ b/thesis/title.tex
@@ -1,11 +1,12 @@
 \begin{titlepage}
 \begin{center}
 
-{\LARGE {\bf Central Proof for}}
-\\[0.2cm]{\LARGE {\bf Computer Science}}
-\\[0.2cm]{\LARGE {\bf using Things that Whir}}
+{\LARGE {\bf Modeling Metal Protein Complexes from}}
+\\[0.2cm]{\LARGE {\bf Experimental Extended X-ray }}
+\\[0.2cm]{\LARGE {\bf Absorption Fine-Structure}}
+\\[0.2cm]{\LARGE {\bf using Evolutionary Algorithms}}
 \\[3cm]
-{\Large{ \bf Paris Hilton}}
+{\Large{ \bf Collin Price}}
 \\[0.5cm]
 {\large Department of Computer Science}
 \\[3cm]
@@ -17,7 +18,7 @@ of the requirements for the degree of}
 {\large Faculty of Mathematics and Science, Brock University\\
 St. Catharines, Ontario}
 \\[4cm]
-\copyright Paris Hilton, 2010
+\copyright Collin Price, 2014
 
 \end{center}
 \end{titlepage}
